fixing collapse

--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -15,7 +15,7 @@
  */
 
 body {
-  padding-top: 70px;
+  padding-top: 0px;
   margin: auto;
 }
 
